--- a/RIck and Morty/Character/CharacterDetails/CharacterDetailsViewController.xib
+++ b/RIck and Morty/Character/CharacterDetails/CharacterDetailsViewController.xib
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CharacterViewController" customModule="RIck_and_Morty" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CharacterDetailsViewController" customModule="RIck_and_Morty" customModuleProvider="target">
             <connections>
                 <outlet property="genderLabel" destination="EDG-0w-o19" id="XFV-5l-lAx"/>
                 <outlet property="imageView" destination="GZT-ym-ce0" id="51g-fn-m7P"/>
