--- a/RIck and Morty/Character/CharacterList/CharacterListTableViewCell.xib
+++ b/RIck and Morty/Character/CharacterList/CharacterListTableViewCell.xib
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="KGk-i7-Jjw" customClass="CharacterListTableViewCell" customModule="RIck_and_Morty" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="CharacterListTableViewCell" customModule="RIck_and_Morty" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="E7x-RQ-l4R">
-                        <rect key="frame" x="90" y="16.5" width="116" height="37"/>
+                        <rect key="frame" x="90" y="21.5" width="116" height="37"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rick Sanchez" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xRa-gB-nzr">
                                 <rect key="frame" x="0.0" y="0.0" width="116" height="21.5"/>
@@ -33,7 +34,7 @@
                         </subviews>
                     </stackView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PmI-RW-HpD">
-                        <rect key="frame" x="15" y="5" width="60" height="60"/>
+                        <rect key="frame" x="15" y="10" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="PmI-RW-HpD" secondAttribute="height" multiplier="1:1" id="UKB-Xp-KMy"/>
                         </constraints>
@@ -44,8 +45,8 @@
                     <constraint firstItem="E7x-RQ-l4R" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0do-H4-x3y"/>
                     <constraint firstItem="E7x-RQ-l4R" firstAttribute="leading" secondItem="PmI-RW-HpD" secondAttribute="trailing" constant="15" id="2at-PR-XB4"/>
                     <constraint firstItem="PmI-RW-HpD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="GFw-HY-Eqi"/>
-                    <constraint firstAttribute="bottom" secondItem="PmI-RW-HpD" secondAttribute="bottom" constant="5" id="iQc-Gy-7E9"/>
-                    <constraint firstItem="PmI-RW-HpD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="plw-U5-p86"/>
+                    <constraint firstAttribute="bottom" secondItem="PmI-RW-HpD" secondAttribute="bottom" constant="10" id="iQc-Gy-7E9"/>
+                    <constraint firstItem="PmI-RW-HpD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="plw-U5-p86"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -54,7 +55,7 @@
                 <outlet property="characterNameLabel" destination="xRa-gB-nzr" id="D1t-0D-UiD"/>
                 <outlet property="characterTypeLabel" destination="BnS-CD-kqt" id="agm-DC-APh"/>
             </connections>
-            <point key="canvasLocation" x="142" y="106"/>
+            <point key="canvasLocation" x="140.57971014492756" y="109.15178571428571"/>
         </tableViewCell>
     </objects>
 </document>
